crates/wdk-macros/tests/outputs/beta/trybuild/wdf_api_that_does_not_exist.stderr
error: Failed to find type alias definition for PFN_WDFAPITHATDOESNOTEXIST
 --> tests/outputs/beta/trybuild/wdf_api_that_does_not_exist.rs
  |
  |             WdfApiThatDoesNotExist,
  |             ^^^^^^^^^^^^^^^^^^^^^^
